--- a/London_Housing.ipynb
+++ b/London_Housing.ipynb
@@ -1,6 +1,223 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "47d2b0f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "59a3f6b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>area</th>\n",
+       "      <th>average_price</th>\n",
+       "      <th>code</th>\n",
+       "      <th>houses_sold</th>\n",
+       "      <th>no_of_crimes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/1995</td>\n",
+       "      <td>city of london</td>\n",
+       "      <td>91449</td>\n",
+       "      <td>E09000001</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2/1/1995</td>\n",
+       "      <td>city of london</td>\n",
+       "      <td>82203</td>\n",
+       "      <td>E09000001</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3/1/1995</td>\n",
+       "      <td>city of london</td>\n",
+       "      <td>79121</td>\n",
+       "      <td>E09000001</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4/1/1995</td>\n",
+       "      <td>city of london</td>\n",
+       "      <td>77101</td>\n",
+       "      <td>E09000001</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5/1/1995</td>\n",
+       "      <td>city of london</td>\n",
+       "      <td>84409</td>\n",
+       "      <td>E09000001</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13544</th>\n",
+       "      <td>9/1/2019</td>\n",
+       "      <td>england</td>\n",
+       "      <td>249942</td>\n",
+       "      <td>E92000001</td>\n",
+       "      <td>64605.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13545</th>\n",
+       "      <td>10/1/2019</td>\n",
+       "      <td>england</td>\n",
+       "      <td>249376</td>\n",
+       "      <td>E92000001</td>\n",
+       "      <td>68677.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13546</th>\n",
+       "      <td>11/1/2019</td>\n",
+       "      <td>england</td>\n",
+       "      <td>248515</td>\n",
+       "      <td>E92000001</td>\n",
+       "      <td>67814.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13547</th>\n",
+       "      <td>12/1/2019</td>\n",
+       "      <td>england</td>\n",
+       "      <td>250410</td>\n",
+       "      <td>E92000001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13548</th>\n",
+       "      <td>1/1/2020</td>\n",
+       "      <td>england</td>\n",
+       "      <td>247355</td>\n",
+       "      <td>E92000001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>13549 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date            area  average_price       code  houses_sold  \\\n",
+       "0       1/1/1995  city of london          91449  E09000001         17.0   \n",
+       "1       2/1/1995  city of london          82203  E09000001          7.0   \n",
+       "2       3/1/1995  city of london          79121  E09000001         14.0   \n",
+       "3       4/1/1995  city of london          77101  E09000001          7.0   \n",
+       "4       5/1/1995  city of london          84409  E09000001         10.0   \n",
+       "...          ...             ...            ...        ...          ...   \n",
+       "13544   9/1/2019         england         249942  E92000001      64605.0   \n",
+       "13545  10/1/2019         england         249376  E92000001      68677.0   \n",
+       "13546  11/1/2019         england         248515  E92000001      67814.0   \n",
+       "13547  12/1/2019         england         250410  E92000001          NaN   \n",
+       "13548   1/1/2020         england         247355  E92000001          NaN   \n",
+       "\n",
+       "       no_of_crimes  \n",
+       "0               NaN  \n",
+       "1               NaN  \n",
+       "2               NaN  \n",
+       "3               NaN  \n",
+       "4               NaN  \n",
+       "...             ...  \n",
+       "13544           NaN  \n",
+       "13545           NaN  \n",
+       "13546           NaN  \n",
+       "13547           NaN  \n",
+       "13548           NaN  \n",
+       "\n",
+       "[13549 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv(r'C:\\Users\\VISHAL\\5. London Housing Data.csv')\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee454f81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
